2007-01-02  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java: Update to use URIPath.
	* ReplSession.java: Update to use Paths.

2006-12-20  Per Bothner  <per@bothner.com>

 	* Makefile.am (KAWA1): Remove unneeded macro.

2006-12-06  Per Bothner  <per@bothner.com>

	* ReplSession.java: Update for renamed Consumer methods.
	* KawaServlet.java: Likewise.

2006-12-04  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java: Update to use ModuleInfo.sourceAbsPath.

2006-11-22  Per Bothner  <per@bothner.com>

	* ReplSession.java: Partially revert changes from 11-17 and 11-18.

2006-11-17  Per Bothner  <per@bothner.com>

	* ReplSession.java: Update writeChar -> append.

2006-11-09  Per Bothner  <per@bothner.com>

	* ReplSession.java: Update for Consumer changes.

2006-08-08  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (LAST_MODIFIED_CACHE_TIME): Moved field
	to ModuleManager.
	(getModule): Use ModuleManager's lastModifiedCacheTime instead.

	* KawaPageServlet.java (getModule): Initialize module state to WALKED.

2006-02-09  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): ModuleExp.evalToClass now does a
	little less, so we must do a little more.

2006-01-10  Per Bothner  <per@bothner.com>

	* HTTP.scm: Moved to gnu/kawa/slib.
	* Makefile.am: Update accordingly. 

2005-12-11  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): Better error catching.
	Update evalToClass call to also pass in URL.

2005-11-16  Per Bothner  <per@bothner.com>

	* ReplSession.java (println): It suffices to just write a newline.
	(appendInput): New method - like appendInputLine without newline.
	* ReplServlet.java (doPost): Handle new action command.

2005-11-08  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): Put ModuleInfo in hashtable.  Ooops.

2005-11-03  Per Bothner  <per@bothner.com>

	* ReplSession.java: Major changes, mainly to support emitting
	html/xml into output.  Don't encode to XML character entities here.